# motion_planner

./: README.md  dmp_module_architecture.odt
action_dmp/: CMakeLists.txt  package.xml
action_dmp/action/: DMP.action
action_dmp/src/: dmp_client_example.cpp  dmp_server.cpp  fibonacci_client.cpp  fibonacci_server.cpp
action_dmp/src/dmp_learning_primitives/mp1/: R_0  R_1
action_dmp/src/dmp_learning_primitives/mp10/: R_0  R_1
action_dmp/src/dmp_learning_primitives/mp11_liftarm/: R_1
action_dmp/src/dmp_learning_primitives/mp12_liftarm/: R_1
action_dmp/src/dmp_learning_primitives/mp2/: R_0
action_dmp/src/dmp_learning_primitives/mp2/dmp_params/: gripper_states.pickle
action_dmp/src/dmp_learning_primitives/mp3/: R_0
action_dmp/src/dmp_learning_primitives/mp5/: R_0
action_dmp/src/dmp_learning_primitives/mp6/: R_0  R_1
action_dmp/src/dmp_learning_primitives/mp7/: R_1
action_dmp/src/dmp_learning_primitives/mp8/dmp_params/: hand_states.pickle
dmp_vfc/: CMakeLists.txt  package.xml  setup.py
dmp_vfc/launch/: action_handler.launch  run.launch  runRobot.launch  vfc.launch
dmp_vfc/msg/: Waypoint.msg
dmp_vfc/scripts/: terminate_process  test_logging  test_service
dmp_vfc/src/: april_tag_detection.py  apriltag.py  general_utils.py  ginger_utils.py  visual_servoing_refactor.py
dmp_vfc/src/action_handler/: action_handler.py  mock_action_publisher.py  mock_action_publisher_mmo.py  mock_grasp.py  mock_robot.py  mock_tf_camera_publisher.py  mock_tf_publisher.py
dmp_vfc/src/cameras/: basecamera.py  localvideo.py  realsense.py  realsense_TX2.py  web_camera.py
dmp_vfc/src/robots/: baserobot.py  dummyrobot.py  ginger.py  ginger_TX2.py  ginger_interface.py  robotfactory.py  yumi.py
dmp_vfc/src/scripts/: README.md  ginger_fix_publisher.py  manipulation.py  transformation_publish_module.py  vision_publisher.py  waypoints_generator_ginger.py
dmp_vfc/src/scripts/dmp_execution_stage/: newikClient.py
dmp_vfc/src/scripts/dmp_learning_primitives/: resultDMP_ginger_eeff.txt
dmp_vfc/src/scripts/dmp_learning_primitives/mp11_liftarm/: R_0
dmp_vfc/src/scripts/dmp_learning_primitives/mp12_liftarm/: R_0
dmp_vfc/src/scripts/dmp_learning_primitives/mp2/: R_1
dmp_vfc/src/scripts/dmp_learning_primitives/mp3/: R_1
dmp_vfc/src/scripts/dmp_learning_primitives/mp4/: R_0  R_1
dmp_vfc/src/scripts/dmp_learning_primitives/mp5/: R_1
dmp_vfc/src/scripts/dmp_learning_primitives/mp7/: R_0
dmp_vfc/src/scripts/dmp_learning_primitives/mp8/: R_0  R_1
dmp_vfc/src/scripts/dmp_learning_primitives/mp9/: R_0  R_1
dmp_vfc/src/scripts/dmp_planning_stage/: dmp_client_example.py  dmp_generator_ginger.py  dmp_module.py  interface_module.py  move_ginger.py  resultDMP_ginger_eeff.txt
dmp_vfc/src/scripts/dmp_recording_stage/: record_dmp_demo_ginger.py  record_mp_gripper_states_ginger.py
dmp_vfc/src/scripts/dmp_supplementary/: dmp_planner_starter.py  dmp_utils.py  visual_module.py  visual_module_TX2.py  visualizer.py
dmp_vfc/src/scripts/waypoint_targets/: mp_way_points.pickle
dmp_vfc/src/test/: ginger_example.py  ginger_position_test.py  mock_tx2.py  test_dummyrobot.py  test_local_video.py  test_real_sense.py  test_web_camera.py
dmp_vfc/src/utils/: config.py  constants.py  helper.py  restart_actuator.py  terminate_manipulation.py  utils.py  yumiUtils.py
dmp_vfc/srv/: GenericJSONService.srv
newik/: CMakeLists.txt  package.xml
newik/include/newik/: BasicFunction.h  XR1ArmAngle.h  XR1ArmKinematics.h  XR1ArmMotionPlanning.h
newik/launch/: newik.launch
newik/src/: iksrv.cpp  main.cpp
newik/srv/: trajectoryIK.srv
