<?xml version="1.0"?>
<package format="2">
  <name>newik</name>
  <version>0.0.0</version>
  <description>The newik package</description>

  <maintainer email="ericyang@todo.todo">ericyang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
